--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,170 @@
 body {
     background-color: whitesmoke;
     font-family: 'Poppins', sans-serif;
+    background-color: hsl(47, 25%, 89%);
+    color: hsl(45, 2%, 55%);
 }
 
-.demo {
-    min-height: 63rem;
-    letter-spacing: .39rem;
+.section {
+    padding: 3rem 0;
 }
 
-.container-demo {
 
+.demo-section {
+    
+}
+
+.demo-container {
+    width: 100vw;
+    margin:  0 auto;
+}
+
+.demo-header {
+    text-align: center;
+}
+
+.demo-nav {
+    display: inline-block;
+    width: 100vw;
+    border-top: 1px solid hsl(6, 73%, 68%);
+    color: hsl(45, 2%, 55%);
+    padding-top: 1.5rem;
+}
+
+.demo-nav ul {
+    padding-left: 0;
+}
+
+.demo-nav ul.demo-left {
+    float: left;
+}
+
+.demo-nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 1.5rem;
+}
+
+.demo-nav ul li:last-child {
+    margin-right: 0;
+}
+
+.demo-nav ul li a {
+    text-decoration: none;
+    color: hsl(45, 2%, 55%);
+}
+
+.demo-content {
+    padding-top: 3rem;
+}
+
+.demo-content .demo-title {
+    display: flex;
+    border-radius: 10px;
+    color: hsl(222, 14%, 18%);
+    padding: 1.3rem .3rem;
+}
+
+.demo-content .demo-title span:nth-child(1) {
+    width: 8%;
+}
+
+.demo-content .demo-title span:nth-child(2) {
+    width: 35%;
+}
+
+.demo-content .demo-title span:nth-child(3) {
+    width: 16%;
+}
+
+.demo-content .demo-title span:nth-child(4) {
+    width: 16%;
+}
+
+.demo-content .demo-title span:nth-child(5) {
+    width: 10%;
+}
+
+.demo-content .demo-title span:nth-child(6) {
+    width: 10%;
+}
+
+.demo-content .list_block {
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding: 20px 5px;
+    margin-top: 25px;
+}
+
+.demo-content .list_block span {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.demo-content .list_block .download-btn {
+    display: flex;
+    padding-right: 1.9rem;
+}
+
+.demo-content .list_block .download-btn:hover {
+    opacity: .7;
+}
+
+.autoplay-btn label {
+    display: flex;
+    align-items: center;
+}
+
+.autoplay-btn h5 {
+    margin: 0;
+    font-weight: 500;
+}
+
+.autoplay-btn span {
+    position: relative;
+    display: inline-block;
+    width: 3.6rem;
+    height: 1.6rem;
+    border: 2px solid hsl(6, 73%, 68%);
+    border-radius: 50px;
+    margin-left: .33rem;
+    transition: all ease 0.5s;
+}
+
+.autoplay-btn span::before {
+    content: '';
+    position: absolute;
+    width: 1.3rem;
+    height: 1.19rem;
+    background: hsl(6, 73%, 68%);
+    border-radius: 50px;
+    top: .1rem;
+    left: .16rem;
+    transition: all ease 0.5s;
+}
+
+.autoplay-btn input:checked ~ span {
+    border-color: hsl(4, 77%, 61%);
+}
+
+.autoplay-btn input:checked ~ span::before{
+    left: 1.9rem;
+    box-shadow: rgba(232, 90, 79, 0.48) 6px 2px 9px 0px, rgba(232, 90, 79, 0.8) -6px -2px 16px 0px;
+    background: hsl(4, 77%, 61%);
+}
+
+.autoplay-btn input {
+    display: none;
+}
+
+.beat_animation ul li {
+    display: inline-block;
+    height: 40px;
+    width: 3px;
+    margin: 0 5px;
+    transform-origin: bottom;
+    animation: beat 1s linear 0s infinite;
+    list-style: none;
 }
 
